etc/iptables-rules-vps
# Generated by iptables-save v1.4.14 on Sun Jul 28 22:00:26 2013
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Jul 28 22:00:26 2013
# Generated by iptables-save v1.4.14 on Sun Jul 28 22:00:26 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [41:6900]
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -p icmp -m limit --limit 1/sec -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -p udp -m limit --limit 2/sec -j ACCEPT
-A FORWARD -p tcp -m limit --limit 2/sec -j ACCEPT
-A FORWARD -p icmp -m limit --limit 2/sec -j ACCEPT
-A FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -o eth0 -j ACCEPT
COMMIT
# Completed on Sun Jul 28 22:00:26 2013
